COMMERCE-8304 autogenerated (blade gw buildLang)

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Přidat cenovou třídu Commerce (Automatic Tr
 action.ADD_COMMERCE_PRODUCT_OPTION=Přidat možnost (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Přidat kategorii možností (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Přidat možnost specifikace produktu Commerce (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Přidat komunitu
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Přidat kupón
 action.ADD_DATA_DEFINITION=Přidat definici dat (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Přidat instanci zprostředkovatele dat (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Spravovat akce
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Správa odhadů dostupnosti (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Správa měn (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Správa stavu (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Správa poznámek k objednávce (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Správa cen objednávek (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Správa poznámek s omezeným pořadím (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Spravovat objednávky
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Zobrazit pravidla (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Nabídka Zobrazit ovládací panely (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Zobrazit udělená autorizace (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Zobrazit šablony
 action.VIEW_MEMBERS=Hledat členy
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Ceník obchodu (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Oznámení o obchodu (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Šablona oznámení obchodu (Automatic Translation)
-model.resource.com.liferay.commerce.order=Obchodní objednávka (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Obchodní ceníky (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Položka obchodní ceny (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Ceník obchodu (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Obchodní produkt (Au
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Katalog obchodu (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Obchodní kanál (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Obchodní zásilky (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Obchodní daně (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Seznamy obchodních přání (Automatic Translation)
 model.resource.com.liferay.depot=Knihovna datových zdrojů (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Položka knihovny datových zdrojů (Automatic Translation)
