--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Tilføj handelsprisklasse (Automatic Translati
 action.ADD_COMMERCE_PRODUCT_OPTION=Tilføj indstilling (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Tilføj indstillingskategori (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Tilføj indstillingen For commerce-produktspecifikation (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Tilføj websted
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Tilføj kupon
 action.ADD_DATA_DEFINITION=Tilføj datadefinition (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Tilføj forekomst af dataprovider (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Administrere hændelser (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Administrer estimater for tilgængelighed (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Administrer valutaer (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Administrer tilstandsstatus (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Administrere ordrebemærkninger (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Administrer ordrepriser (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administrere begrænsede noter af ordre (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Administrer ordre
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Vis regler (Automatic Translation)
 action.VIEW_CONTROL_PANEL=View Control Panel Menu (Automatic Copy)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Vis tildelte godkendelser (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Vis skabeloner (Automatic Translation)
 action.VIEW_MEMBERS=Vis medlemmer
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Prisliste for handel (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Meddelelse om handel (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Skabelon til handelsnotifikation (Automatic Translation)
-model.resource.com.liferay.commerce.order=Handelsordre (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Prislister for handel (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Handelsprispost (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Prisliste for handel (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Commerce Product (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Handelskatalog (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Handelskanal (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Handelsleverancer (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Handelsskatter (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Ønskelister for handel (Automatic Translation)
 model.resource.com.liferay.depot=Aktivbibliotek (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Post for aktivbibliotek (Automatic Translation)
