--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Handelspreisklasse hinzufügen
 action.ADD_COMMERCE_PRODUCT_OPTION=Option hinzufügen
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Optionskategorie hinzufügen
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Spezifikationsoption für Handelsprodukt hinzufügen
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Site hinzufügen
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Gutschein hinzufügen
 action.ADD_DATA_DEFINITION=Datendefinition hinzufügen
 action.ADD_DATA_PROVIDER_INSTANCE=Datenanbieter hinzufügen
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Termine verwalten
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Schätzungen für Verfügbarkeit verwalten
 action.MANAGE_COMMERCE_CURRENCIES=Währungen verwalten
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gesundheitszustand verwalten
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Anmerkungen zu Bestellungen verwalten
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Bestellpreise verwalten
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Eingeschränkte Anmerkungen zu Bestellungen verwalten
 action.MANAGE_COMMERCE_ORDERS=Aufträge verwalten
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Anhänge anzeigen
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Bilder anzeigen
 action.VIEW_COMMERCE_PRODUCT_RULES=Regeln anzeigen
 action.VIEW_CONTROL_PANEL=Kontrollbereich anzeigen
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Erteilte Autorisierungen anzeigen
 action.VIEW_KB_TEMPLATES=Vorlagen anzeigen
 action.VIEW_MEMBERS=Mitglieder anzeigen
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Handelsbestellungsty
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelspreisliste
 model.resource.com.liferay.commerce.notification=Commerce-Benachrichtigung
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Commerce Benachrichtigungs-Vorlage
-model.resource.com.liferay.commerce.order=Handelsbestellung
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Handelspreislisten
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Handelspreiseintrag
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Handelspreisliste
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Handelsprodukt
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Commerce-Katalog
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Handelskanal
 model.resource.com.liferay.commerce.shipment=Handelslieferungen
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Handelssteuern
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Handelswunschlisten
 model.resource.com.liferay.depot=Assetbibliothek
 model.resource.com.liferay.depot.model.DepotEntry=Assetbibliothek
