--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Añadir clase de precios de comercio
 action.ADD_COMMERCE_PRODUCT_OPTION=Añadir opción
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Añadir categoría de opción
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Añadir opción de especificación de producto de comercio
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Añadir una comunidad
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Añadir un cupón
 action.ADD_DATA_DEFINITION=Añadir Definición de Datos
 action.ADD_DATA_PROVIDER_INSTANCE=Añadir instancia del proveedor de datos
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gestionar eventos
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Administrar cálculos de disponibilidad
 action.MANAGE_COMMERCE_CURRENCIES=Administrar monedas
 action.MANAGE_COMMERCE_HEALTH_STATUS=Administrar estado de mantenimiento
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Administrar notas de pedidos
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Administrar precios de pedidos
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administrar notas restringidas de pedidos
 action.MANAGE_COMMERCE_ORDERS=Administrar los pedidos
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Ver archivos adjuntos
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Ver imágenes
 action.VIEW_COMMERCE_PRODUCT_RULES=Ver reglas
 action.VIEW_CONTROL_PANEL=Ver menú de panel de control
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Ver autorizaciones concedidas
 action.VIEW_KB_TEMPLATES=Ver plantillas
 action.VIEW_MEMBERS=Buscar miembros
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipo de pedido de co
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de precios de comercio
 model.resource.com.liferay.commerce.notification=Notificación de comercio
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Plantilla de notificación de comercio
-model.resource.com.liferay.commerce.order=Pedido de comercio
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Listas de precios de comercio
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entrada de precio de comercio
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Lista de precios de comercio
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Producto de comercio
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catálogo de comercio
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canal de comercio
 model.resource.com.liferay.commerce.shipment=Envíos de comercio
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Impuestos de comercio
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Listas de deseos de comercio
 model.resource.com.liferay.depot=Repositorio
 model.resource.com.liferay.depot.model.DepotEntry=Entrada del repositorio
