--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=اضافه کردن تجارت قیمت گذا
 action.ADD_COMMERCE_PRODUCT_OPTION=افزودن امکانات
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=اضافه کردن گزینه دسته بندی
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=افزودن گزینه مشخصات محصول بازرگانی (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=افزودن سایت
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=اضافه کردن کوپن
 action.ADD_DATA_DEFINITION=افزودن تعریف داده
 action.ADD_DATA_PROVIDER_INSTANCE=اضافه کردن نمونه ارائه دهنده اطلاعات
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=مدیریت رویدادها
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=مدیریت برآوردهای موجودی
 action.MANAGE_COMMERCE_CURRENCIES=مدیریت ارزها
 action.MANAGE_COMMERCE_HEALTH_STATUS=مدیریت وضعیت سلامتی
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=مدیریت یادداشت های سفارش
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=مدیریت قیمت سفارش (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=مدیریت یادداشت های محدود شده سفارش
 action.MANAGE_COMMERCE_ORDERS=مدیریت سفارشات
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=مشاهده قوانین (Automatic Translation)
 action.VIEW_CONTROL_PANEL=نمایش منوی کنترل پنل
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=مشاهده مجوزهای اعطا شده (Automatic Translation)
 action.VIEW_KB_TEMPLATES=مشاهده‌ی الگوها
 action.VIEW_MEMBERS=مشاهده‌ی اعضا
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=لیست قیمت های تجاری
 model.resource.com.liferay.commerce.notification=اطلاع رسانی بازرگانی (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=الگوی اعلانات تجاری
-model.resource.com.liferay.commerce.order=سفارش تجازی
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=لیست قیمت تجارت (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=واردات قیمت بازرگانی
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=لیست قیمت های تجاری
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=محصول تجاری
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=کاتالوگ بازرگانی (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=کانال بازرگانی (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=محموله های بازرگانی (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=مالیات بر تجارت (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=لیست آرزوهای بازرگانی (Automatic Translation)
 model.resource.com.liferay.depot=کتابخانه دارایی (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=ورودی کتابخانه دارایی (Automatic Translation)
