--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Lisää Kaupankäynnin Hintaluokka
 action.ADD_COMMERCE_PRODUCT_OPTION=Lisää Vaihtoehto
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Lisää Vaihtoehtoluokka
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Lisää Kaupankäynnin Tuotekuvauksen Valinta
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Lisää sivusto
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Lisää kuponki
 action.ADD_DATA_DEFINITION=Lisää tietorakenne
 action.ADD_DATA_PROVIDER_INSTANCE=Lisää tietopalvelun esiintymät
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Hallitse tapahtumia
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Hallitse Saatavuusarvioita
 action.MANAGE_COMMERCE_CURRENCIES=Hallitse Valuuttoja
 action.MANAGE_COMMERCE_HEALTH_STATUS=Hallitse Terveydentilaa
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Hallitse Tilausten Huomautuksia
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hallitse Tilausten Hintoja
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hallitse Tilausten Rajoitettuja Huomautuksia
 action.MANAGE_COMMERCE_ORDERS=Hallinnoi tilauksia
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Näytä liitteet
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Näytä kuvat
 action.VIEW_COMMERCE_PRODUCT_RULES=Näytä Säännöt
 action.VIEW_CONTROL_PANEL=Näytä Ohjauspaneelin Valikko
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Katso Myönnetyt Käyttöoikeudet
 action.VIEW_KB_TEMPLATES=Näytä sivupohjia
 action.VIEW_MEMBERS=Hae jäseniä
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Kauppatilaustyyppi
 model.resource.com.liferay.commerce.model.CommercePriceList=Kaupankäyntihinnasto
 model.resource.com.liferay.commerce.notification=Kaupankäynnin Ilmoitus
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Kaupallinen Ilmoitusmalli
-model.resource.com.liferay.commerce.order=Kauppatilaus
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Kaupankäynnin Hintaluettelot
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Kaupankäynnin Hintamerkintä
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Kaupankäyntihinnasto
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Kaupankäyntituote
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Kaupankäynnin Luettelo
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Kaupallinen Kanava
 model.resource.com.liferay.commerce.shipment=Kaupankäynnin Toimitukset
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Kaupankäynnin Verot
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Kaupankäynnin Toiveluettelot
 model.resource.com.liferay.depot=Tietovarasto
 model.resource.com.liferay.depot.model.DepotEntry=Tietovarasto Merkintä
