--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Ajouter une classe de tarification commerciale
 action.ADD_COMMERCE_PRODUCT_OPTION=Ajouter une option
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Ajouter une catégorie d'options
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Ajouter une option de spécification de produit commercial
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Ajouter une communauté
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Ajouter un bon de réduction
 action.ADD_DATA_DEFINITION=Ajouter la définition des données
 action.ADD_DATA_PROVIDER_INSTANCE=Ajouter des exemples au fournisseur de données
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gérer les événements
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gérer les estimations de disponibilité
 action.MANAGE_COMMERCE_CURRENCIES=Gérer les devises
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gérer l'état de santé
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gérer les notes de commande
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gérer les prix des commandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gérer les notes restreintes de commande
 action.MANAGE_COMMERCE_ORDERS=Gérer les commandes
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Afficher les pièces jointes
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Afficher les images
 action.VIEW_COMMERCE_PRODUCT_RULES=Afficher les règles
 action.VIEW_CONTROL_PANEL=Aller au panneau de configuration
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Voir les autorisations accordées
 action.VIEW_KB_TEMPLATES=Voir les modèles
 action.VIEW_MEMBERS=Voir les membres
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Type de commande com
 model.resource.com.liferay.commerce.model.CommercePriceList=Liste de prix commerciale
 model.resource.com.liferay.commerce.notification=Notification commerciale
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modèle de notification de commerce
-model.resource.com.liferay.commerce.order=Commande commerciale
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Listes des prix de commerce
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entrée de prix commercial
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Liste de prix commerciale
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produit commercial
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catalogue commercial
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canal commercial
 model.resource.com.liferay.commerce.shipment=Livraisons de commerce
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Taxes de commerce
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Listes de souhaits de commerce
 model.resource.com.liferay.depot=Dépôt
 model.resource.com.liferay.depot.model.DepotEntry=Entrée du dépôt
