--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Tambahkan Kelas Harga Perdagangan (Automatic T
 action.ADD_COMMERCE_PRODUCT_OPTION=Tambahkan Opsi (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Tambahkan Kategori Opsi (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Opsi Tambahkan Spesifikasi Produk Perdagangan (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Tambahkan Situs
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Tambahkan Kupon
 action.ADD_DATA_DEFINITION=Tambahkan Definisi Data (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Instans Tambahkan Penyedia Data (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Mengelola Pemesanan
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Mengelola Estimasi Ketersediaan (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Kelola Mata Uang (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Kelola Status Kesehatan (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Mengelola Catatan Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Kelola Harga Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Mengelola Pesan Catatan Terbatas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Mengelola Pesanan
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Lihat Aturan (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Lihat Menu Panel Kontrol (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Lihat Otorisasi yang Diberikan (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Lihat Template
 action.VIEW_MEMBERS=Menemukan Anggota
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Daftar Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Pemberitahuan Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Templat Pemberitahuan Perdagangan (Automatic Translation)
-model.resource.com.liferay.commerce.order=Pesanan Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Daftar Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entri Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Daftar Harga Perdagangan (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produk Perdagangan (A
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Katalog Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Saluran Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Pengiriman Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Pajak Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Daftar Keinginan Perdagangan (Automatic Translation)
 model.resource.com.liferay.depot=Pustaka Aset (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Entri Pustaka Aset (Automatic Translation)
