--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=הוספת מחלקת תמחור מסחר (Aut
 action.ADD_COMMERCE_PRODUCT_OPTION=הוסף אופציה
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=הוסף קטגוריית אופציות
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=האפשרות 'הוסף מפרט מוצר מסחר' (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=הוסף אתר
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=הוסף תלוש
 action.ADD_DATA_DEFINITION=הוספת הגדרת נתונים (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=הוסף מופע ספק נתונים
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=נהל אירועים
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=נהל הערכות זמינות
 action.MANAGE_COMMERCE_CURRENCIES=נהל מטבעות
 action.MANAGE_COMMERCE_HEALTH_STATUS=נהל מצב תקינות
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=נהל הערות הזמנה
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=ניהול מחירי הזמנות (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=נהל הערות הזמנה מוגבלות
 action.MANAGE_COMMERCE_ORDERS=נהל הזמנות
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=הצג כללים (Automatic Translation)
 action.VIEW_CONTROL_PANEL=עבור לתפריט לוח הבקרה
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=הצג הרשאות שהוענקו
 action.VIEW_KB_TEMPLATES=הצג תבניות
 action.VIEW_MEMBERS=צפה בחברים
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=מחירון מסחר
 model.resource.com.liferay.commerce.notification=הודעת מסחר (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=תבנית דיווח על מסחר (Automatic Translation)
-model.resource.com.liferay.commerce.order=הזמנת מסחר
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=מחירונים למסחר (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=כניסת מחיר מסחר (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=מחירון מסחר
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=מוצר מסחר
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=קטלוג מסחר (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=ערוץ מסחר (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=משלוחי מסחר (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=מסי מסחר (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=רשימות משאלות מסחר (Automatic Translation)
 model.resource.com.liferay.depot=ספריית נכסים (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=ערך ספריית נכסים (Automatic Translation)
