--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=상거래 가격 책정 클래스 추가 (Auto
 action.ADD_COMMERCE_PRODUCT_OPTION=옵션 추가 (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=옵션 범주 추가 (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=상거래 제품 사양 옵션 추가 (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=지역 사회를 추가하십시요
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=쿠폰을 추가하십시요
 action.ADD_DATA_DEFINITION=데이터 정의 추가 (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=데이터 공급자 인스턴스 추가 (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=이벤트 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=가용성 예측 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=통화 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=상태 관리 (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=주문 노트 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=주문 가격 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=주문 제한 메모 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=순서를 처리하십시요
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=규칙 보기 (Automatic Translation)
 action.VIEW_CONTROL_PANEL=제어판 메뉴 보기 (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=부여된 권한 보기 (Automatic Translation)
 action.VIEW_KB_TEMPLATES=템플릿 보기 (Automatic Translation)
 action.VIEW_MEMBERS=발견 일원
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=상거래 가격 표 (Automatic Translation)
 model.resource.com.liferay.commerce.notification=상거래 알림 (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=상거래 알림 템플릿 (Automatic Translation)
-model.resource.com.liferay.commerce.order=상거래 주문 (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=상거래 가격 표 (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=상거래 가격 항목 (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=상거래 가격 표 (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=상거래 제품 (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=상거래 카탈로그 (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=커머스 채널 (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=상거래 발송물 (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=상거래 세금 (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=상거래 위시리스트 (Automatic Translation)
 model.resource.com.liferay.depot=애셋 라이브러리
 model.resource.com.liferay.depot.model.DepotEntry=애셋 라이브러리 항목
