--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Įtraukti komercijos kainodaros klasę (Automa
 action.ADD_COMMERCE_PRODUCT_OPTION=Įtraukti parinktį (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Įtraukti parinkties kategoriją (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Įtraukti "Commerce" produkto specifikacijos parinktį (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Įtraukti svetainę (Automatic Translation)
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Pridėti kuponą (Automatic Translation)
 action.ADD_DATA_DEFINITION=Įtraukti duomenų apibrėžimą (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Įtraukti duomenų teikėjo egzempliorių (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Tvarkyti įvykius (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Tvarkyti pasiekiamumo įvertinimus (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Tvarkyti valiutas (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Tvarkyti sveikatos būklę (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Tvarkyti užsakymo pastabas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Tvarkyti užsakymų kainas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Tvarkyti apribotas užsakymo pastabas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Tvarkyti užsakymus (Automatic Translation)
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Peržiūrėti taisykles (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Peržiūrėti valdymo skydo meniu (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Peržiūrėti suteiktas autorizacijas (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Peržiūrėti šablonus (Automatic Translation)
 action.VIEW_MEMBERS=Peržiūrėti narius (Automatic Translation)
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Komercijos kainoraštis (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Komercijos perspėjimas (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate="Commerce" perspėjimo šablonas (Automatic Translation)
-model.resource.com.liferay.commerce.order=Komercijos užsakymas (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Komercijos kainoraščiai (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Komercijos kainos įrašas (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Komercijos kainoraštis (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Komercijos produktas 
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Komercijos katalogas (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Komercijos kanalas (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Komercijos siuntos (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Komercijos mokesčiai (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Komercijos pageidavimų sąrašai (Automatic Translation)
 model.resource.com.liferay.depot=Išteklių biblioteka (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Išteklių bibliotekos įrašas (Automatic Translation)
