--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Handelsprijsklasse toevoegen
 action.ADD_COMMERCE_PRODUCT_OPTION=Optie toevoegen
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Optiecategorie toevoegen
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Specificatie-optie handelsproduct toevoegen
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Site toevoegen
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Kortingsbon toevoegen
 action.ADD_DATA_DEFINITION=Datadefinitie toevoegen
 action.ADD_DATA_PROVIDER_INSTANCE=Dataprovider geval toevoegen
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gebeurtenissen beheren
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Beschikbaarheidsramingen beheren
 action.MANAGE_COMMERCE_CURRENCIES=Valuta's beheren
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gezondheidstoestand beheren
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Ordernota's beheren
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Bestelprijzen beheren
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Beperkte Ordernota's beheren
 action.MANAGE_COMMERCE_ORDERS=Bestellingen beheren
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Bijlagen bekijken
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Afbeeldingen bekijken
 action.VIEW_COMMERCE_PRODUCT_RULES=Regels bekijken
 action.VIEW_CONTROL_PANEL=Toon Control Panel Menu
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Toegekende autorisaties weergeven
 action.VIEW_KB_TEMPLATES=Templates bekijken
 action.VIEW_MEMBERS=Leden bekijken
@@ -9311,7 +9316,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Bestellingtype hande
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprijslijst
 model.resource.com.liferay.commerce.notification=Handelsmelding
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Meldingsjabloon winkel
-model.resource.com.liferay.commerce.order=Handelsorder
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Handelsprijslijsten
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Invoer handelsprijs
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Handelsprijslijst
@@ -9335,7 +9343,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Handelsproduct
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Handelscatalogus
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Handelskanaal
 model.resource.com.liferay.commerce.shipment=Handelsverzendingen
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Handelsbelastingen
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Handelswenslijsten
 model.resource.com.liferay.depot=Bewaarplaats
 model.resource.com.liferay.depot.model.DepotEntry=Invoer bewaarplaats
