--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Adicionar classe de preços de comércio (Auto
 action.ADD_COMMERCE_PRODUCT_OPTION=Adicionar opção (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Adicionar categoria de opção (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Adicionar opção de especificação do produto de comércio (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Adicionar um Site
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Adicionar Cupão
 action.ADD_DATA_DEFINITION=Adicionar definição de dados (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Adicionar instância de provedor de dados
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gerir Eventos
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gerenciar estimativas de disponibilidade (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Gerenciar moedas (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gerenciar o Estado de Saúde (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gerenciar notas de pedidos (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gerenciar preços de pedidos (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gerenciar notas restritas de pedidos (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Gerir Pedidos
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Exibir regras (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Ir para Painel de Controle
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Ver Autorizações Concedidas (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Ver Templates
 action.VIEW_MEMBERS=Visualizar Membros
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de preços do comércio (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Notificação do Comércio (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modelo de notificação de comércio (Automatic Translation)
-model.resource.com.liferay.commerce.order=Ordem de Comércio (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Listas de preços do comércio (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entrada de preço do comércio (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Lista de preços do comércio (Automatic Translation)
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Commerce Product (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catálogo de Comércio (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canal de Comércio (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Remessas de Comércio (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Impostos sobre o comércio (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Listas de desejos do comércio (Automatic Translation)
 model.resource.com.liferay.depot=Biblioteca de Ativos (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Entrada na Biblioteca de Ativos (Automatic Translation)
