--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Adăugare clasă de prețuri pentru comerț (A
 action.ADD_COMMERCE_PRODUCT_OPTION=Adăugare opțiune (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Adăugare categorie de opțiuni (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Adăugare opțiune specificații produs comerț (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Adaugă site
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Adaugă cupon
 action.ADD_DATA_DEFINITION=Adăugare definiție date (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Adăugare instanță furnizor de date (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gestionarea evenimentelor (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestionare estimări disponibilitate (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Gestionare valute (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestionare stare de sănătate (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gestionare note comandă (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestionare prețuri comandă (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gestionare note restricționate comandă (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Gestionează Comenzi
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Vizualizare reguli (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Vizualizare meniu panou de control (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Vizualizare autorizații acordate (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Vizualizare șabloane (Automatic Translation)
 action.VIEW_MEMBERS=Găseşte Membrii
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Listă de prețuri comerț (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Notificarea comerțului (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Șablon notificare comerț (Automatic Translation)
-model.resource.com.liferay.commerce.order=Ordinea comerțului (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Liste de prețuri pentru comerț (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Intrare preț comerț (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Listă de prețuri comerț (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produs comercial (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catalog comerț (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canalul de comerț (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Expedieri comerciale (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Taxe comerciale (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Liste de dorințe pentru comerț (Automatic Translation)
 model.resource.com.liferay.depot=Bibliotecă de active (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Intrare bibliotecă de active (Automatic Translation)
