--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Pridanie triedy cien pre obchod (Automatic Tra
 action.ADD_COMMERCE_PRODUCT_OPTION=Pridať možnosť (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Pridať kategóriu možností (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Pridať možnosť špecifikácie produktu Commerce (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Pridať sídlo
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Pridať kupón
 action.ADD_DATA_DEFINITION=Pridať definíciu údajov (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Pridať inštanciu poskytovateľa údajov (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Spravovať udalosti
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Správa odhadov dostupnosti (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Správa mien (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Správa stavu stavu (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Správa poznámok k objednávke (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Správa cien objednávky (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Správa poznámok s obmedzeným poradím (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Správa objednávok
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Zobraziť pravidlá (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Zobraziť ponuku ovládacieho panela (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Zobraziť udelené povolenia (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Zobraziť šablóny
 action.VIEW_MEMBERS=Zobraz členov
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Obchodný cenník (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Oznámenie o obchode (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Šablóna oznámenia o obchode (Automatic Translation)
-model.resource.com.liferay.commerce.order=Obchodná objednávka (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Obchodné cenníky (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Položka obchodnej ceny (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Obchodný cenník (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Obchodný produkt (Au
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Katalóg pre obchod (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Obchodný kanál (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Obchodné zásielky (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Dane z obchodu (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Zoznamy prianí pre obchod (Automatic Translation)
 model.resource.com.liferay.depot=Knižnica aktív (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Položka knižnice majetku (Automatic Translation)
