--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Dodajanje razreda cen trgovine (Automatic Tran
 action.ADD_COMMERCE_PRODUCT_OPTION=Dodaj možnost (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Dodaj kategorijo možnosti (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Dodaj Specifikacija izdelka Commerce Možnost (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Dodaj skupnost
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Dodaj kupon
 action.ADD_DATA_DEFINITION=Dodaj definicijo podatkov (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Primerek dodajanja ponudnika podatkov (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gebeurtenissen beheren
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Upravljanje ocen razpoložljivosti (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Upravljanje valut (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Upravljanje stanja zdravja (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Upravljanje opomb nalogov (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Upravljanje cen naročila (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Upravljanje omejenih opomb za naročilo (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Uredi naročila
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Ogled pravil (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Ogled menija nadzorne plošče (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Ogled odobrenih dovoljenj (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Ogled predlog (Automatic Translation)
 action.VIEW_MEMBERS=Poišči člane
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Cenik za trgovino (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Obvestilo o trgovini (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Predloga obvestila o trgovini (Automatic Translation)
-model.resource.com.liferay.commerce.order=Trgovinski nalog (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Cenik trgovcev (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Vnos cene trgovine (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Cenik za trgovino (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Trgovski izdelek (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Trgovinski katalog (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Trgovinski kanal (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Trgovinske pošiljke (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Davki na trgovino (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Seznami želja za commerce (Automatic Translation)
 model.resource.com.liferay.depot=Knjižnica sredstev (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Vnos v knjižnico sredstev (Automatic Translation)
