--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Lägg till handelsprisklass
 action.ADD_COMMERCE_PRODUCT_OPTION=Lägg till alternativ
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Lägg till alternativkategori
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Lägg till specifikationsalternativ för handelsprodukt
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Skapa plats
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Skapa kupong
 action.ADD_DATA_DEFINITION=Lägg till datadefinition
 action.ADD_DATA_PROVIDER_INSTANCE=Lägg till dataprovider-instans
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Hantera händelser
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Hantera tillgänglighetsberäkning
 action.MANAGE_COMMERCE_CURRENCIES=Hantera valutor
 action.MANAGE_COMMERCE_HEALTH_STATUS=Hantera hälsostatus
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Hantera beställningsanteckningar
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hantera orderpriser
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hantera beställningsbegränsade anteckningar
 action.MANAGE_COMMERCE_ORDERS=Hantera beställningar
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Visa bilagor
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Visa bilder
 action.VIEW_COMMERCE_PRODUCT_RULES=Visa regler
 action.VIEW_CONTROL_PANEL=Kontrollpanelmeny
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Visa beviljade behörigheter
 action.VIEW_KB_TEMPLATES=Visa mallar
 action.VIEW_MEMBERS=Visa medlemmar
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Typ av handelsorder
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprislista
 model.resource.com.liferay.commerce.notification=Handelsavisering
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Handelsaviseringsmall
-model.resource.com.liferay.commerce.order=Handelsbeställning
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Handelsprislistor
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Handelsprispost
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Handelsprislista
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Handelsprodukt
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Handelskatalog
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Handelskanal
 model.resource.com.liferay.commerce.shipment=Handelsleveranser
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Handelsmoms
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Handelsönskelistor
 model.resource.com.liferay.depot=Lagringsplats
 model.resource.com.liferay.depot.model.DepotEntry=Post i lagringsplats
