--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=添加商务定价类
 action.ADD_COMMERCE_PRODUCT_OPTION=添加选项
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=添加选项类别
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=添加商务产品规格选项
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=添加站点
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=添加优惠券
 action.ADD_DATA_DEFINITION=添加数据定义
 action.ADD_DATA_PROVIDER_INSTANCE=添加数据供应商实例
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=管理活动
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=管理库存估计
 action.MANAGE_COMMERCE_CURRENCIES=管理币种
 action.MANAGE_COMMERCE_HEALTH_STATUS=管理健康状态
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=管理订单备注
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=管理订单价格
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=管理订单限制备注
 action.MANAGE_COMMERCE_ORDERS=管理订单
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=查看附件
 action.VIEW_COMMERCE_PRODUCT_IMAGES=查看图像
 action.VIEW_COMMERCE_PRODUCT_RULES=查看规则
 action.VIEW_CONTROL_PANEL=查看控制面板菜单
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=查看获得的授权
 action.VIEW_KB_TEMPLATES=查看模板
 action.VIEW_MEMBERS=查看成员
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=商务订单类型
 model.resource.com.liferay.commerce.model.CommercePriceList=商务价格列表
 model.resource.com.liferay.commerce.notification=商务通知
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=商务通知模板
-model.resource.com.liferay.commerce.order=商务订单
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=商务价目表
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=商务价格条目
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=商务价格列表
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=商务产品
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=商务目录
 model.resource.com.liferay.commerce.product.model.CommerceChannel=商务渠道
 model.resource.com.liferay.commerce.shipment=商务装运
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=商务税
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=商务愿望清单
 model.resource.com.liferay.depot=存储库
 model.resource.com.liferay.depot.model.DepotEntry=存储库条目
