--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Afegeix una classe de preus de comerç
 action.ADD_COMMERCE_PRODUCT_OPTION=Afegeix opció
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Afegeix categoria d'opció
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Afegeix l'opció d'especificació del producte de comerç
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Afegeix un lloc web
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Afegeix un cupó
 action.ADD_DATA_DEFINITION=Afegeix una definició de dades
 action.ADD_DATA_PROVIDER_INSTANCE=Afegir una instància del proveïdor de dades
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gestiona els esdeveniments
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestiona les estimacions de disponibilitat
 action.MANAGE_COMMERCE_CURRENCIES=Gestiona les monedes
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestiona l'estat de salut
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Administra notes de comandes
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestiona els preus de les comandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administra notes restringides de comandes
 action.MANAGE_COMMERCE_ORDERS=Gestiona les comandes
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Mostra els adjunts
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Mostra les imatges
 action.VIEW_COMMERCE_PRODUCT_RULES=Mostra les regles
 action.VIEW_CONTROL_PANEL=Mostra el menú del tauler de control
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Mostra les autoritzacions concedides
 action.VIEW_KB_TEMPLATES=Mostra plantilles
 action.VIEW_MEMBERS=Visualitza els membres
@@ -9310,7 +9315,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipus de comanda de 
 model.resource.com.liferay.commerce.model.CommercePriceList=Llista de preus de comerç
 model.resource.com.liferay.commerce.notification=Notificació de comerç
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Plantilla de notificació de comerç
-model.resource.com.liferay.commerce.order=Comanda de comerç
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Llistes de preus de Comerç
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entrada de preus de comerç
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Llista de preus de comerç
@@ -9334,7 +9342,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Producte de comerç
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catàleg de comerç
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canal de comerç
 model.resource.com.liferay.commerce.shipment=Enviaments de Comerç
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Impostos de Comerç
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Llistes de desitjos de Comerç
 model.resource.com.liferay.depot=Repositori
 model.resource.com.liferay.depot.model.DepotEntry=Entrada de repositori
