--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Προσθήκη κλάσης τιμολόγη
 action.ADD_COMMERCE_PRODUCT_OPTION=Επιλογή προσθήκης (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Προσθήκη κατηγορίας επιλογών (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Επιλογή "Προσθήκη προδιαγραφής προϊόντος εμπορίου" (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Προσθήκη κοινότητας
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Προσθήκη δελτίο
 action.ADD_DATA_DEFINITION=Προσθήκη ορισμού δεδομένων (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Προσθήκη παρουσίας υπηρεσίας παροχής δεδομένων (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Διαχείριση συμβάντων (Automatic Transl
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Διαχείριση εκτιμήσεων διαθεσιμότητας (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Διαχείριση νομισμάτων (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Διαχείριση κατάστασης υγείας (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Διαχείριση σημειώσεων παραγγελίας (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Διαχείριση τιμών παραγγελιών (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Διαχείριση σημειώσεων περιορισμένης παραγγελίας (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Διαχείριση παραγγελιών
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Προβολή κανόνων (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Προβολή μενού του Πίνακα Ελέγχου (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Προβολή αδειών που έχουν χορηγηθεί (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Προβολή προτύπων (Automatic Translation)
 action.VIEW_MEMBERS=Εμφάνιση μελών
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Τιμοκατάτμηση Εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Ειδοποίηση εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Πρότυπο ειδοποίησης εμπορίου (Automatic Translation)
-model.resource.com.liferay.commerce.order=Εμπορική παραγγελία (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Τιμοκατάλόγους Εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Εισαγωγή τιμής εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Τιμοκατάτμηση Εμπορίου (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Εμπορικό Πρ
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Κατάλογος Εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Κανάλι εμπορίου (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Εμπορικές αποστολές (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Φόροι Εμπορίου (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Λίστες επιθυμιών εμπορίου (Automatic Translation)
 model.resource.com.liferay.depot=Βιβλιοθήκη πόρων (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Καταχώρηση βιβλιοθήκης πόρων (Automatic Translation)
