--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Add Commerce Pricing Class
 action.ADD_COMMERCE_PRODUCT_OPTION=Add Option
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Add Option Category
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Add Commerce Product Specification Option
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry
 action.ADD_COMMUNITY=Add Site
+action.ADD_COR_ENTRY=Add Commerce Order Rule
 action.ADD_COUPON=Add Coupon
 action.ADD_DATA_DEFINITION=Add Data Definition
 action.ADD_DATA_PROVIDER_INSTANCE=Add Data Provider Instance
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Manage Events
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Manage Availability Estimates
 action.MANAGE_COMMERCE_CURRENCIES=Manage Currencies
 action.MANAGE_COMMERCE_HEALTH_STATUS=Manage Health Status
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms
 action.MANAGE_COMMERCE_ORDER_NOTES=Manage Order Notes
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes
 action.MANAGE_COMMERCE_ORDERS=Manage Orders
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images
 action.VIEW_COMMERCE_PRODUCT_RULES=View Rules
 action.VIEW_CONTROL_PANEL=View Control Panel Menu
+action.VIEW_COR_ENTRIES=View Commerce Order Entries
 action.VIEW_GRANTED_AUTHORIZATIONS=View Granted Authorizations
 action.VIEW_KB_TEMPLATES=View Templates
 action.VIEW_MEMBERS=View Members
@@ -9314,7 +9319,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type
 model.resource.com.liferay.commerce.model.CommercePriceList=Commerce Price List
 model.resource.com.liferay.commerce.notification=Commerce Notification
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Commerce Notification Template
-model.resource.com.liferay.commerce.order=Commerce Order
+model.resource.com.liferay.commerce.order=Commerce Orders
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule
+model.resource.com.liferay.commerce.order.type=Commerce Order Types
 model.resource.com.liferay.commerce.price.list=Commerce Price Lists
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Commerce Price Entry
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Commerce Price List
@@ -9338,7 +9346,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Commerce Product
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Commerce Catalog
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Commerce Channel
 model.resource.com.liferay.commerce.shipment=Commerce Shipments
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions
 model.resource.com.liferay.commerce.tax=Commerce Taxes
+model.resource.com.liferay.commerce.term=Commerce Terms
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term
 model.resource.com.liferay.commerce.wish.list=Commerce Wish Lists
 model.resource.com.liferay.depot=Asset Library
 model.resource.com.liferay.depot.model.DepotEntry=Asset Library Entry
