--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Commerce Pricing Classi lisamine (Automatic Tr
 action.ADD_COMMERCE_PRODUCT_OPTION=Lisa suvand (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Lisa suvandikategooria (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Commerce'i tootespetsifikatsiooni lisamise suvand (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Lisa kommuun
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Lisa kupong
 action.ADD_DATA_DEFINITION=Andmedefinitsiooni lisamine (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Andmepakkuja eksemplari lisamine (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Sündmuste haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Kättesaadavuse hinnangute haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Valuutade haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Seisundi oleku haldamine (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Tellimuse märkmete haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Tellimuse hindade haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Tellimuse piiratud märkmete haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Tellimuste haldamine
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Reeglite kuvamine (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Juhtpaneeli menüü kuvamine (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Antud lubade kuvamine (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Mallide kuvamine (Automatic Translation)
 action.VIEW_MEMBERS=Leia liikmeid
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Kaubanduse hinnakiri (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Kaubandusteatis (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Commerce'i teatise mall (Automatic Translation)
-model.resource.com.liferay.commerce.order=Kaubandustellimus (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Kaubanduse hinnakirjad (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Commerce Price'i kanne (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Kaubanduse hinnakiri (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Kaubandustoode (Autom
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Ärikataloog (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Commerce Channel (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Kaubanduse saadetised (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Kaubandusmaksud (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Ärisoovide loendid (Automatic Translation)
 model.resource.com.liferay.depot=Vara teek (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Varateegi kanne (Automatic Translation)
