--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Aggiungi Classe di Prezzo
 action.ADD_COMMERCE_PRODUCT_OPTION=Aggiungi Opzione
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Aggiungi Categoria di Opzioni
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Aggiungi Opzione di Specifica di Prodotto
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Aggiungi Sito
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Aggiungi Buono
 action.ADD_DATA_DEFINITION=Aggiungi definizione dati (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Aggiungi Istanza Provider Dati
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gestisci Eventi
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestione Stime di Disponibilità
 action.MANAGE_COMMERCE_CURRENCIES=Gestione Valute
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestione Health Status
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gestisci Note d'Ordine
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestione Prezzi d'Ordine
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gestione Note d'Ordine Private
 action.MANAGE_COMMERCE_ORDERS=Gestisci Ordini
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Visualizza Regole
 action.VIEW_CONTROL_PANEL=Visualizza menù Pannello di Controllo
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Visualizza autorizzazioni concesse (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Mostra Modello
 action.VIEW_MEMBERS=Visualizza Membri
@@ -9309,7 +9314,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Listino prezzi commercio (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Notifica commercio (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modello di notifica commerce (Automatic Translation)
-model.resource.com.liferay.commerce.order=Ordine commerciale (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Listini prezzi commercio (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Ingresso prezzo commercio (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Listino prezzi commercio (Automatic Translation)
@@ -9333,7 +9341,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Prodotto commerciale 
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catalogo commercio (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canale del Commercio (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Spedizioni commerciali (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Tasse sul commercio (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Liste dei desideri commerciali (Automatic Translation)
 model.resource.com.liferay.depot=Raccolta di risorse (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Voce raccolta risorse (Automatic Translation)
