--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Tambah Kelas Harga Perdagangan (Automatic Tran
 action.ADD_COMMERCE_PRODUCT_OPTION=Tambah Opsyen (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Tambah Kategori Opsyen (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Tambah Pilihan Spesifikasi Produk Perdagangan (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Tambah Tapak (Automatic Translation)
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Tambah Kupon (Automatic Translation)
 action.ADD_DATA_DEFINITION=Tambah Definisi Data (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Tambah Tika Pembekal Data (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Uruskan Peristiwa (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Urus anggaran Ketersediaan (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Menguruskan Mata Wang (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Menguruskan Status Kesihatan (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Urus Nota Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Uruskan Harga Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Urus pesanan Nota Terhad (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Urus pesanan (Automatic Translation)
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Lihat Peraturan (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Go to Control Panel
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Lihat Kebenaran Yang Diberikan (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Lihat Templat (Automatic Translation)
 action.VIEW_MEMBERS=Lihat Ahli (Automatic Translation)
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Senarai Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Pemberitahuan Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Templat Pemberitahuan Perdagangan (Automatic Translation)
-model.resource.com.liferay.commerce.order=Perintah Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Senarai Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Kemasukan Harga Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Senarai Harga Perdagangan (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produk Perdagangan (A
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Katalog Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Saluran Perdagangan (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Penghantaran Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Cukai Perdagangan (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Senarai Hajat Perdagangan (Automatic Translation)
 model.resource.com.liferay.depot=Perpustakaan Aset (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Kemasukan Perpustakaan Aset (Automatic Translation)
