--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Legg til prisklasse for handel (Automatic Tran
 action.ADD_COMMERCE_PRODUCT_OPTION=Legg til alternativ (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Legg til alternativkategori (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Legg til alternativ for produktspesifikasjon for Commerce (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Legg til gruppe
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Legg til kupong
 action.ADD_DATA_DEFINITION=Legg til datadefinisjon
 action.ADD_DATA_PROVIDER_INSTANCE=Legg til datatilbyderinstans
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Administrer arrangement
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Behandle tilgjengelighetsestimater (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Behandle valutaer (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Behandle tilstandsstatus (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Behandle ordremerknader (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Behandle ordrepriser (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Behandle begrensede ordremerknader (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Behandle bestilinger
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Vis regler (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Vis kontrollpanelmenyen (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Se innvilgede autorisasjoner
 action.VIEW_KB_TEMPLATES=Vis maler
 action.VIEW_MEMBERS=Vis medlemmer
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Prisliste for Handel (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Varsel om handel (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Varslingsmal for Handel (Automatic Translation)
-model.resource.com.liferay.commerce.order=Handelsordre (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Prislister for handel (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Prisoppføring for handel (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Prisliste for Handel (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Handelsprodukt (Autom
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Handelskatalog (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Handelskanal (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Handelsforsendelser (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Handelsskatt (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Ønskelister for handel (Automatic Translation)
 model.resource.com.liferay.depot=Ressursbibliotek
 model.resource.com.liferay.depot.model.DepotEntry=Ressursbibliotekinnlegg
