--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Dodaj klasę cen commerce (Automatic Translati
 action.ADD_COMMERCE_PRODUCT_OPTION=Dodaj opcję (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Dodaj kategorię opcji (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Dodaj opcję specyfikacji produktu commerce (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Dodaj społeczność
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Dodaj kupon
 action.ADD_DATA_DEFINITION=Dodaj definicję danych (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Dodaj wystąpienie dostawcy danych (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Zarządzaj wydarzeniami
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Zarządzanie szacunkami dostępności (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Zarządzanie walutami (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Zarządzanie stanem kondycji (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Zarządzanie notatkami o zamówieniach (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Zarządzanie cenami zamówień (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Zarządzanie notatkami z ograniczeniami zamówień (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Zarządzaj zamówieniami
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Zobacz reguły (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Menu Panelu sterowania (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Wyświetlanie udzielonych autoryzacji (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Podgląd szablonów
 action.VIEW_MEMBERS=Zobacz uczestników
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Cennik handlu (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Powiadomienie o handlu (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Szablon powiadomienia o handlu (Automatic Translation)
-model.resource.com.liferay.commerce.order=Zamówienie handlowe (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Cenniki handlu (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Wejście ceny handlowej (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Cennik handlu (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produkt handlowy (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Katalog handlowy (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Kanał Handlowy (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Przesyłki handlowe (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Podatki handlowe (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Listy życzeń w handlu (Automatic Translation)
 model.resource.com.liferay.depot=Biblioteka zasobów (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Wpis biblioteki zasobów (Automatic Translation)
