--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Adicionar classe de precificação comercial
 action.ADD_COMMERCE_PRODUCT_OPTION=Adicionar Opção
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Adicionar Categoria da Opção
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Adicionar Opção de Especificação de Produto do Commerce
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Adicionar Site
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Adicionar Cupom
 action.ADD_DATA_DEFINITION=Adicionar Definição de Dados
 action.ADD_DATA_PROVIDER_INSTANCE=Adicionar instância de provedor de dados
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Gerenciar Eventos
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gerenciar Estimativas de Disponibilidade
 action.MANAGE_COMMERCE_CURRENCIES=Gerenciar Moedas
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gerenciar estado de saúde
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gerenciar Notas do Pedido
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gerenciar Preços do Pedido
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gerenciar Notas Restritas do Pedido
 action.MANAGE_COMMERCE_ORDERS=Gerenciar pedidos
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=Visualizar anexos
 action.VIEW_COMMERCE_PRODUCT_IMAGES=Visualizar imagens
 action.VIEW_COMMERCE_PRODUCT_RULES=Visualizar regras
 action.VIEW_CONTROL_PANEL=Ir para o Painel de Controle
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Ver Autorizações Concedidas
 action.VIEW_KB_TEMPLATES=Visualizar Modelos
 action.VIEW_MEMBERS=Ver Membros
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipo de pedido de co
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de Preço do Comércio
 model.resource.com.liferay.commerce.notification=Notificação comercial
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modelo de notificação de comércio
-model.resource.com.liferay.commerce.order=Pedido do comércio
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Listas de preço comerciais
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Entrada de preço do comércio
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Lista de Preço do Comércio
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Produto do Comércio
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Catálogo comercial
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Canal de comércio
 model.resource.com.liferay.commerce.shipment=Envios comerciais
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Impostos comerciais
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Lista de desejos comerciais
 model.resource.com.liferay.depot=Biblioteca de Ativos
 model.resource.com.liferay.depot.model.DepotEntry=Entrada da Biblioteca de Ativos
