--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Add Commerce Pricing Class (Automatic Copy)
 action.ADD_COMMERCE_PRODUCT_OPTION=Add Option (Automatic Copy)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Add Option Category (Automatic Copy)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Add Commerce Product Specification Option (Automatic Copy)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=தளத்தை இணைக்க
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=கூப்பன் இணைக்க
 action.ADD_DATA_DEFINITION=Data Definition-ஐ உருவாக்கு
 action.ADD_DATA_PROVIDER_INSTANCE=Add Data Provider Instance (Automatic Copy)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=நிகழ்வுகளை நிர்வகி
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Manage Availability Estimates (Automatic Copy)
 action.MANAGE_COMMERCE_CURRENCIES=Manage Currencies (Automatic Copy)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Manage Health Status (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Manage Order Notes (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Orders-களை நிர்வகிக்க
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=View Rules (Automatic Copy)
 action.VIEW_CONTROL_PANEL=Control Panel Menu-வை பார்க்க
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=வழங்கப்பட்ட அங்கீகாரங்கள்
 action.VIEW_KB_TEMPLATES=டெம்ப்ளேட்களைக் காண்க
 action.VIEW_MEMBERS=Members-களை பார்க்க
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Commerce Price List (Automatic Copy)
 model.resource.com.liferay.commerce.notification=Commerce Notification (Automatic Copy)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Commerce Notification Template (Automatic Copy)
-model.resource.com.liferay.commerce.order=Commerce Order (Automatic Copy)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Commerce Price Lists (Automatic Copy)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Commerce Price Entry (Automatic Copy)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Commerce Price List (Automatic Copy)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Commerce Product (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Commerce Catalog (Automatic Copy)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Commerce Channel (Automatic Copy)
 model.resource.com.liferay.commerce.shipment=Commerce Shipments (Automatic Copy)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Commerce Taxes (Automatic Copy)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Commerce Wish Lists (Automatic Copy)
 model.resource.com.liferay.depot=Asset Library (Automatic Copy)
 model.resource.com.liferay.depot.model.DepotEntry=Asset Library Entry (Automatic Copy)
