--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Commerce Fiyatlandırma Sınıfı Ekle (Automa
 action.ADD_COMMERCE_PRODUCT_OPTION=Seçenek Ekle (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Seçenek Kategorisi Ekle (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Commerce Ürün Belirtimi Seçeneği Ekle (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Topluluk Ekle
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Kupon Ekle
 action.ADD_DATA_DEFINITION=Veri Tanımı Ekle (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Veri Sağlayıcısı Örneği Ekle (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Olayları Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Kullanılabilirlik Tahminlerini Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Para Birimlerini Yönetme (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Sistem Durumunu Yönet (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Sipariş Notlarını Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Sipariş Fiyatlarını Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Sipariş Kısıtlamalı Notlarını Yönet (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=İstekleri Yönet
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Kuralları Görüntüle (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Denetim Masası Menüsünü Görüntüle (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Verilen Yetkileri Görüntüle (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Şablonları Görüntüle (Automatic Translation)
 action.VIEW_MEMBERS=Kullanıcıları Bul
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Ticaret Fiyat Listesi (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Ticaret Bildirimi (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Ticaret Bildirim Şablonu (Automatic Translation)
-model.resource.com.liferay.commerce.order=Ticaret Siparişi (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Ticaret Fiyat Listeleri (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Ticaret Fiyat Girişi (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Ticaret Fiyat Listesi (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Ticaret Ürünü (Aut
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Ticaret Kataloğu (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Ticaret Kanalı (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Ticaret Gönderileri (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Ticaret Vergileri (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Ticaret İstek Listeleri (Automatic Translation)
 model.resource.com.liferay.depot=Varlık Kitaplığı (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Varlık Kitaplığı Girişi (Automatic Translation)
