--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -238,7 +238,9 @@ action.ADD_COMMERCE_PRICING_CLASS=Thêm Lớp định giá thương mại (Autom
 action.ADD_COMMERCE_PRODUCT_OPTION=Thêm Tùy chọn (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_OPTION_CATEGORY=Thêm Thể loại Tùy chọn (Automatic Translation)
 action.ADD_COMMERCE_PRODUCT_SPECIFICATION_OPTION=Thêm tùy chọn Thông số kỹ thuật sản phẩm thương mại (Automatic Translation)
+action.ADD_COMMERCE_TERM_ENTRY=Add Commerce Term Entry (Automatic Copy)
 action.ADD_COMMUNITY=Thêm trang thông tin
+action.ADD_COR_ENTRY=Add Commerce Order Rule (Automatic Copy)
 action.ADD_COUPON=Thêm phiếu giảm giá
 action.ADD_DATA_DEFINITION=Thêm Định nghĩa Dữ liệu (Automatic Translation)
 action.ADD_DATA_PROVIDER_INSTANCE=Thêm Phiên bản Nhà cung cấp Dữ liệu (Automatic Translation)
@@ -376,8 +378,10 @@ action.MANAGE_BOOKINGS=Quản lý sự kiện (Automatic Translation)
 action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Quản lý ước tính về tính khả dụng (Automatic Translation)
 action.MANAGE_COMMERCE_CURRENCIES=Quản lý đơn vị tiền tệ (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Quản lý tình trạng sức khỏe (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_DELIVERY_TERMS=Manage Order Delivery Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Quản lý Ghi chú Đơn hàng (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_TERMS=Manage Order Payment Terms (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Quản lý giá đơn hàng (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Quản lý ghi chú bị hạn chế thứ tự (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Quản lý đơn đặt hàng
@@ -460,6 +464,7 @@ action.VIEW_COMMERCE_PRODUCT_ATTACHMENTS=View Attachments (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_IMAGES=View Images (Automatic Copy)
 action.VIEW_COMMERCE_PRODUCT_RULES=Xem Quy tắc (Automatic Translation)
 action.VIEW_CONTROL_PANEL=Menu Xem Pa-nen Điều khiển (Automatic Translation)
+action.VIEW_COR_ENTRIES=View Commerce Order Entries (Automatic Copy)
 action.VIEW_GRANTED_AUTHORIZATIONS=Xem ủy quyền được cấp (Automatic Translation)
 action.VIEW_KB_TEMPLATES=Xem Mẫu (Automatic Translation)
 action.VIEW_MEMBERS=Xem thành viên
@@ -9308,7 +9313,10 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=Bảng giá thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.notification=Thông báo thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Mẫu thông báo thương mại (Automatic Translation)
-model.resource.com.liferay.commerce.order=Đơn đặt hàng thương mại (Automatic Translation)
+model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
+model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
+model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
 model.resource.com.liferay.commerce.price.list=Bảng giá thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceEntry=Nhập giá thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.price.list.model.CommercePriceList=Bảng giá thương mại (Automatic Translation)
@@ -9332,7 +9340,10 @@ model.resource.com.liferay.commerce.product.model.CProduct=Sản phẩm thương
 model.resource.com.liferay.commerce.product.model.CommerceCatalog=Danh mục thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.product.model.CommerceChannel=Kênh thương mại (Automatic Translation)
 model.resource.com.liferay.commerce.shipment=Lô hàng thương mại (Automatic Translation)
+model.resource.com.liferay.commerce.subscription=Commerce Subscriptions (Automatic Copy)
 model.resource.com.liferay.commerce.tax=Thuế thương mại (Automatic Translation)
+model.resource.com.liferay.commerce.term=Commerce Terms (Automatic Copy)
+model.resource.com.liferay.commerce.term.model.CommerceTermEntry=Commerce Term (Automatic Copy)
 model.resource.com.liferay.commerce.wish.list=Danh sách mong muốn thương mại (Automatic Translation)
 model.resource.com.liferay.depot=Thư viện Tài nguyên (Automatic Translation)
 model.resource.com.liferay.depot.model.DepotEntry=Mục nhập Thư viện Tài nguyên (Automatic Translation)
